--- a/pre_set.ipynb
+++ b/pre_set.ipynb
@@ -363,15 +363,19 @@
     "\n",
     "\n",
     "\n",
-    "def breeding(frame):\n",
+    "def breeding(frame, angle = 0, left_right = 0, up_down = 0, flip = 0):\n",
     "    \"\"\"Image Breeding\"\"\"\n",
+    "\n",
     "    grayFrame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "    cp = (grayFrame.shape[1] / 2, grayFrame.shape[0] / 2)\n",
-    "    rot = cv2.getRotationMatrix2D(cp, -5, 1) # 20도 회전, 스케일 0.5배\n",
+    "    rot = cv2.getRotationMatrix2D(cp, angle, 1) # 20도 회전, 스케일 0.5배\n",
     "    grayFrame = cv2.warpAffine(grayFrame, rot, (0, 0))\n",
     "\n",
-    "    grayFrame = cv2.resize(grayFrame[100:1000, 350:1250],dsize=(0,0),fx=0.3, fy=0.3)\n",
+    "    if flip == 1:\n",
+    "        grayFrame = cv2.flip(grayFrame, 1)\n",
+    "\n",
+    "    grayFrame = cv2.resize(grayFrame[100+up_down:1000+up_down, 350+left_right:1250+left_right],dsize=(0,0),fx=0.3, fy=0.3)\n",
     "    return grayFrame\n",
     "\n",
     "# input_loc = r'./data/raw_data/fracture_1.mp4'\n",
