--- a/pre_set.ipynb
+++ b/pre_set.ipynb
@@ -402,7 +402,7 @@
     "    plt.show()\n",
     "    plt.close()\n",
     "    print(np.shape(result[0]), input_loc, output_loc)\n",
-    "    np.save(output_loc+name+'_5',result)"
+    "    np.save(output_loc+name+'_5',result)\n"
    ]
   }
  ],
