--- a/learning.ipynb
+++ b/learning.ipynb
@@ -414,6 +414,86 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_15 (Conv2D)           (None, 270, 270, 64)      2944      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_9 (MaxPooling2 (None, 135, 135, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_16 (Conv2D)           (None, 135, 135, 128)     73856     \n",
+      "_________________________________________________________________\n",
+      "conv2d_17 (Conv2D)           (None, 135, 135, 128)     147584    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_10 (MaxPooling (None, 67, 67, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_18 (Conv2D)           (None, 67, 67, 256)       295168    \n",
+      "_________________________________________________________________\n",
+      "conv2d_19 (Conv2D)           (None, 67, 67, 256)       590080    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_11 (MaxPooling (None, 33, 33, 256)       0         \n",
+      "_________________________________________________________________\n",
+      "flatten_3 (Flatten)          (None, 278784)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_9 (Dense)              (None, 128)               35684480  \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_10 (Dense)             (None, 64)                8256      \n",
+      "_________________________________________________________________\n",
+      "dropout_7 (Dropout)          (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_11 (Dense)             (None, 5)                 325       \n",
+      "=================================================================\n",
+      "Total params: 36,802,693\n",
+      "Trainable params: 36,802,693\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(500, 270, 270, 5)"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
