--- a/graph.ipynb
+++ b/graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -12,23 +12,37 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(20, 270, 270, 5)"
+      "text/plain": "<Figure size 640x480 with 10 Axes>"
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "import numpy as np"
+    "import cv2\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "final",
    "language": "python",
-   "name": "python3"
+   "display_name": "final"
   },
   "language_info": {
    "codemirror_mode": {
